移除属性原型，增加定点数库

--- a/Assets/GameAbilitySystem/GameAbilitySystem.asmdef
+++ b/Assets/GameAbilitySystem/GameAbilitySystem.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:9211b54bab341cb47ae2fb64d0129850",
-        "GUID:298dff7fd453955449dc9e26ac2623e6"
+        "GUID:298dff7fd453955449dc9e26ac2623e6",
+        "GUID:5a0c95e8efd7f2a45bc92d0d91826df6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
