Node demo editor逻辑修改

--- a/Assets/NodeSystem/NodeSystemDemo/NodeSystem.Demo.asmdef
+++ b/Assets/NodeSystem/NodeSystemDemo/NodeSystem.Demo.asmdef
@@ -2,7 +2,8 @@
     "name": "NodeSystem.Demo",
     "rootNamespace": "",
     "references": [
-        "GUID:298dff7fd453955449dc9e26ac2623e6"
+        "GUID:298dff7fd453955449dc9e26ac2623e6",
+        "GUID:3ecc63be1598eaf458594bc4d90dd1bc"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
