--- a/Assets/NodeSystem/NodeSystem.asmdef
+++ b/Assets/NodeSystem/NodeSystem.asmdef
@@ -1,4 +1,4 @@
 {
 	"name": "NodeSystem",
-	"references":[ "GUID:0d49cbbc2fccff8428f6578b639d237c" ]
+	"references":[ "GUID:0d49cbbc2fccff8428f6578b639d237c", "GUID:5a0c95e8efd7f2a45bc92d0d91826df6" ]
 }
