change game log system

--- a/Assets/GameAbilitySystem/Logic/GameAbilitySystem.Logic.asmdef
+++ b/Assets/GameAbilitySystem/Logic/GameAbilitySystem.Logic.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "GameAbilitySystem.Logic",
-    "rootNamespace": "",
+    "rootNamespace": "GAS.Logic",
     "references": [
         "GUID:298dff7fd453955449dc9e26ac2623e6",
         "GUID:0d49cbbc2fccff8428f6578b639d237c",
