--- a/Assets/GameAbilitySystem/GameAbilitySystem.asmdef
+++ b/Assets/GameAbilitySystem/GameAbilitySystem.asmdef
@@ -5,7 +5,8 @@
         "GUID:9211b54bab341cb47ae2fb64d0129850",
         "GUID:298dff7fd453955449dc9e26ac2623e6",
         "GUID:5a0c95e8efd7f2a45bc92d0d91826df6",
-        "GUID:0d49cbbc2fccff8428f6578b639d237c"
+        "GUID:0d49cbbc2fccff8428f6578b639d237c",
+        "GUID:11dfcd683055bba4db56c879e7ecf247"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
