--- a/Assets/GameAbilitySystem/Logic/GameAbilitySystem.Logic.asmdef
+++ b/Assets/GameAbilitySystem/Logic/GameAbilitySystem.Logic.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:298dff7fd453955449dc9e26ac2623e6",
         "GUID:0d49cbbc2fccff8428f6578b639d237c",
-        "Smf.Math"
+        "GUID:5a0c95e8efd7f2a45bc92d0d91826df6",
+        "GUID:26577d82827bc004bbcea067dccef0cf"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
