--- a/Assets/NodeSystem/NodeSystem.asmdef
+++ b/Assets/NodeSystem/NodeSystem.asmdef
@@ -1,4 +1,18 @@
 {
-	"name": "NodeSystem",
-	"references":[ "GUID:0d49cbbc2fccff8428f6578b639d237c", "GUID:5a0c95e8efd7f2a45bc92d0d91826df6" ]
+    "name": "NodeSystem",
+    "rootNamespace": "",
+    "references": [
+        "GUID:0d49cbbc2fccff8428f6578b639d237c",
+        "GUID:5a0c95e8efd7f2a45bc92d0d91826df6",
+        "GUID:26577d82827bc004bbcea067dccef0cf"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
