--- a/Assets/GameAbilitySystem/Editor/GameAbilitySystem.Editor.asmdef
+++ b/Assets/GameAbilitySystem/Editor/GameAbilitySystem.Editor.asmdef
@@ -7,7 +7,8 @@
         "GUID:3ecc63be1598eaf458594bc4d90dd1bc",
         "GUID:298dff7fd453955449dc9e26ac2623e6",
         "GUID:5a0c95e8efd7f2a45bc92d0d91826df6",
-        "GUID:26577d82827bc004bbcea067dccef0cf"
+        "GUID:26577d82827bc004bbcea067dccef0cf",
+        "GUID:0d49cbbc2fccff8428f6578b639d237c"
     ],
     "includePlatforms": [
         "Editor"
