--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.5.2",
+    "com.unity.collab-proxy": "2.8.2",
     "com.unity.feature.development": "1.0.2",
+    "com.unity.graphtoolkit": "0.1.0-exp.1",
+    "com.unity.inputsystem": "1.14.1",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.timeline": "1.8.7",
-    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.9",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
     "com.unity.ugui": "2.0.0",
-    "com.unity.visualscripting": "1.9.4",
+    "com.unity.visualscripting": "1.9.7",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
