--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "2.8.2",
+    "com.unity.entities": "1.3.14",
     "com.unity.feature.development": "1.0.2",
-    "com.unity.graphtoolkit": "0.1.0-exp.1",
+    "com.unity.graphtoolkit": "0.3.0-exp.1",
     "com.unity.inputsystem": "1.14.1",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.timeline": "1.8.7",
