--- a/Assets/GameplayCommonLibrary/ObjectSystemV2/GCL.ObjSys.asmdef
+++ b/Assets/GameplayCommonLibrary/ObjectSystemV2/GCL.ObjSys.asmdef
@@ -1,7 +1,9 @@
 {
-    "name": "GameplayCommonLibrary",
-    "rootNamespace": "",
-    "references": [],
+    "name": "GCL.ObjSys",
+    "rootNamespace": "GCL.ObjSys",
+    "references": [
+        "GUID:0d49cbbc2fccff8428f6578b639d237c"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
@@ -10,5 +12,5 @@
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
-    "noEngineReferences": false
+    "noEngineReferences": true
 }
