尝试新的技能系统

--- a/Assets/GameplayCommonLibrary/Gameplay.Common.asmdef
+++ b/Assets/GameplayCommonLibrary/Gameplay.Common.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "GameplayCommonLibrary",
-    "rootNamespace": "GCL",
+    "rootNamespace": "Gameplay.Common",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
